--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,40 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+* {
+  box-sizing: border-box;
+}
+
+.wrap-form {
+  margin: 0 auto;
+}
+
+.form {
+  margin: 0 auto;
+}
+input {
+  outline: none;
+  width: 272px;
+  height: 40px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
+button {
+  outline: none;
+  border: none;
+  display: inline-flex;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background: #4e75ff;
+  color: #fff;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
