--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,9 +4,6 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -65,15 +62,27 @@ button {
 .gallery {
   display: flex;
   flex-wrap: wrap;
+  gap: 10px;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: space-between;
+  align-items: center;
   width: 360px;
-  height: 300px;
+  height: 260px;
   border: 1px solid #242424;
 }
 .img-comments {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+}
+
+.img-container img {
+  width: 360px;
+  height: 200px;
 }
