--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,7 @@
   font-weight: 400;
 
   color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: #d6caca;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,6 +29,9 @@ li {
   padding: 0;
   list-style: none;
 }
+p {
+  margin: 0;
+}
 a {
   color: currentColor;
   text-decoration: none;
@@ -41,14 +44,15 @@ img {
   height: auto;
 }
 
+body {
+  background-color: #d6caca;
+}
 .container {
   display: flex;
   flex-direction: column;
   gap: 30px;
-}
-.wrap-form {
-  margin: 0 auto;
-  width: 100vw;
+  justify-content: center;
+  align-items: center;
 }
 
 .form {
@@ -61,6 +65,14 @@ input {
   padding: 8px 16px;
   border-radius: 4px;
   border: 1px solid #808080;
+  background-color: #eae5e5;
+}
+
+input:hover {
+  border: 2px solid #070707;
+}
+input:focus {
+  border: 2px solid #4e75ff;
 }
 button {
   outline: none;
@@ -82,6 +94,9 @@ button {
   letter-spacing: 0.04em;
 }
 
+button:hover {
+  background-color: #6c8cff;
+}
 .gallery {
   display: flex;
   flex-wrap: wrap;
@@ -98,63 +113,63 @@ button {
   width: 360px;
   height: 260px;
   border: 1px solid #242424;
+  border-radius: 5px;
 }
 .img-comments {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-bottom: 5px;
 }
 
 .img-container img {
   width: 360px;
   height: 200px;
+  border-radius: 5px;
 }
 
 .loader {
-  color: #66b3ef;
-  font-size: 3px;
-  width: 1em;
-  height: 1em;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   position: relative;
-  text-indent: -9999em;
-  animation: mulShdSpin 1.3s infinite linear;
-  transform: translateZ(0);
+  animation: rotate 1s linear infinite;
+}
+.loader::before,
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+  animation: prixClipFix 2s linear infinite;
+}
+.loader::after {
+  inset: 8px;
+  transform: rotate3d(90, 90, 0, 180deg);
+  border-color: #ff3d00;
 }
 
-@keyframes mulShdSpin {
-  0%,
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
   100% {
-    box-shadow: 0 -3em 0 0.2em, 2em -2em 0 0em, 3em 0 0 -1em, 2em 2em 0 -1em,
-      0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 0;
+    transform: rotate(360deg);
   }
-  12.5% {
-    box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em, 3em 0 0 0, 2em 2em 0 -1em,
-      0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
-  }
-  25% {
-    box-shadow: 0 -3em 0 -0.5em, 2em -2em 0 0, 3em 0 0 0.2em, 2em 2em 0 0,
-      0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
-  }
-  37.5% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 0, 2em 2em 0 0.2em,
-      0 3em 0 0em, -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
   }
   50% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 0em,
-      0 3em 0 0.2em, -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
   }
-  62.5% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em,
-      0 3em 0 0, -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
-  }
-  75% {
-    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 -1em, 2em 2em 0 -1em,
-      0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
-  }
-  87.5% {
-    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em,
-      0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+  75%,
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
   }
 }
